[package]
name = "graffophone"
version = "0.1.0"
authors = ["gndl <gndl@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "playone"
path = "playone/src/main.rs"

[[bin]]
name = "au2tseq"
path = "au2tseq/src/main.rs"

[dependencies]
failure = "0.1.8"
ringbuf = "0.2.8"
#glib = "0.18.2"
cairo-rs = "0.18.2"
sourceview5 = "0.7.1"
talker = { path = "./talker" }
scale = { path = "./scale" }
session = { path = "./session" }
rustfft = "6.2.0"

[dependencies.gtk]
package = "gtk4"
version = "0.7.3"
features = ["v4_12"]

[dependencies.gio]
version = "0.18.2"
features = ["v2_58"]
