[package]
name = "graffophone"
version = "0.6.1"
authors = ["gndl <gndl@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "playone"
path = "playone/src/main.rs"

[[bin]]
name = "au2tseq"
path = "au2tseq/src/main.rs"

[dependencies]
failure = "0.1.8"
dirs = "6.0.0"
glib = "0.21.5"
cairo-rs = "0.21.5"
sourceview5 = "0.10.0"
audiofile = { path = "./audiofile" }
talker = { path = "./talker" }
scale = { path = "./scale" }
session = { path = "./session" }
rustfft = "6.2.0"
lv2-sys = "2"
lv2_raw = "0.2"
luil = { git = "https://gitlab.com/gndl/luil.git" }

[dependencies.gtk]
package = "gtk4"
version = "0.10.3"
features = ["v4_12"]

[dependencies.gio]
version = "0.21.5"
features = ["v2_58"]
