opam-version: "1.2"
maintainer: "gndl@users.noreply.github.com"
authors: ["gndl"]
homepage: "https://github.com/gndl/graffophone"
bug-reports: "https://github.com/gndl/graffophone/issues"
dev-repo: "https://github.com/gndl/graffophone.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" graffophone "-j" 4]
]

build-test: ["dune" "runtest" "-p" graffophone]

depends: [
  "dune" {build}
  "alcotest" {test}
  "lablgtk"
  "config-file"
  "ffmpeg"
]

available: [
  ocaml-version >= "4.05.0"
]
