opam-version: "1.2"
maintainer: "gndl@users.noreply.github.com"
authors: ["gndl"]
homepage: "https://github.com/gndl/graffophone"
bug-reports: "https://github.com/gndl/graffophone/issues"
dev-repo: "https://github.com/gndl/graffophone.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" graffophone "-j" 4]
]

build-test: ["dune" "runtest" "-p" graffophone]

depends: [
  "dune" {build}
  "ppx_sexp_conv" {build}
  "ppxlib" {build}
  "alcotest" {test}
  "sexplib"
  "lablgtk"
  "ffmpeg"
]

available: [
  ocaml-version >= "4.05.0"
]
