opam-version: "1.2"
synopsis: "Modular audio processing system"
maintainer: "gndl@users.noreply.github.com"
authors: ["gndl"]
homepage: "https://github.com/gndl/graffophone"
bug-reports: "https://github.com/gndl/graffophone/issues"
dev-repo: "https://github.com/gndl/graffophone.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" graffophone]
]

build-test: ["dune" "runtest" "-p" graffophone]

depends: [
  "dune" {build}
  "ppx_sexp_conv" {build}
  "ppxlib" {build}
  "alcotest" {test}
  "sexplib"
  "lablgtk"
  "ffmpeg" {>= "0.3.0"}
]

available: [
  ocaml-version >= "4.05.0"
]
