[package]
name = "playone"
version = "0.1.0"
authors = ["gndl <gndl@users.noreply.github.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
lilv = { git = "https://github.com/grejppi/lilv-rs.git" }
granode = { path = "../talker" }
session = { path = "../session" }
#ffmpeg = "0.1.1"
#portaudio = "0.7.0"
