[package]
name = "session"
version = "0.1.0"
authors = ["gndl"]

[dependencies]
failure = "0.1.8"
ringbuf = "0.2.8"
cpal = "0.15.2"
nom = "7.1"
lv2-sys = "2"
lv2_raw = "0.2"
lilv = "0.2"
livi = { git = "https://github.com/gndl/livi-rs.git" }
luil = { path = "../luil" }
audiofile = { path = "../audiofile" }
scale = { path = "../scale" }
talker = { path = "../talker" }
