(include_subdirs unqualified)

(rule
    (deps (source_tree .))
    (targets libgramotor_stubs.a)
    (action
        (progn
            (run cargo build)
            (run cp target/debug/libgramotor_stubs.a .)
        )
    )
)

(library
   (name gramotor)
   (foreign_archives gramotor_stubs)
   (c_library_flags (-lpthread -lc -lm -lasound -llilv-0))
)
