(include_subdirs unqualified)

(rule
    (deps (source_tree .))
    (targets libgramotor_stubs.a dllgramotor_stubs.so)
    (action
        (progn
;            (run cargo build -Z unstable-options --out-dir . --target-dir ../rust --release)
            (run cargo build -Z unstable-options --out-dir .)
            (run mv libgramotor_stubs.so ./dllgramotor_stubs.so)
;            (run cargo build)
;            (run cp ../../../../target/debug/libgramotor_stubs.a .)
        )
    )
)

(library
   (name gramotor)
;   (foreign_archives gramotor_stubs)
   (self_build_stubs_archive (gramotor))
   (c_library_flags (-lpthread -lc -lm -lasound -llilv-0))
)
