(include_subdirs unqualified)

(rule
    (deps (source_tree .))
    (targets libgramotor_stubs.a dllgramotor_stubs.so)
    (action
        (progn
;            (run cargo build -Z unstable-options --out-dir . --target-dir ../rust --release)
            ; (run cargo build -Z unstable-options --out-dir .)
            ; (run mv libgramotor_stubs.so ./dllgramotor_stubs.so)
            (run cargo build)
            (run cp ../../../../target/debug/libgramotor_stubs.a .)
            (run cp ../../../../target/debug/libgramotor_stubs.so dllgramotor_stubs.so)
        )
    )
)

(library
   (name gramotor)
   (foreign_archives gramotor_stubs)
;   (self_build_stubs_archive (gramotor))
   (c_library_flags (-lpthread -lc -lm -lasound -llilv-0))
)

(library
 (name            lilv)
 (public_name     lilv)
 (libraries threads.posix)
 (c_names         ocaml_lilv lv2_stub feature_stub node_stub ui_stub scalepoint_stub port_stub instance_stub plugin_stub pluginclass_stub world_stub)
 (foreign_stubs (language c)        (-I/usr/include/lilv-0 -g -O2 -Wall -DCAML_NAME_SPACE))
 (c_library_flags (-llilv-0))
)
